--- a/sys/Makefile
+++ b/sys/Makefile
@@ -5,7 +5,7 @@ CSCOPEDIRS=	boot bsm cam cddl compat conf contrib crypto ddb dev fs gdb \
 		geom gnu isa kern libkern modules net net80211 \
 		netgraph netinet netinet6 netipsec netpfil \
 		netsmb nfs nfsclient nfsserver nlm ofed opencrypto \
-		rpc security sys ufs vm xdr xen ${CSCOPE_ARCHDIR}
+		rpc security sys ufs vm vps xdr xen ${CSCOPE_ARCHDIR}
 .if !defined(CSCOPE_ARCHDIR)
 .if defined(ALL_ARCH)
 CSCOPE_ARCHDIR = amd64 arm arm64 i386 mips powerpc riscv sparc64 x86
